--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.397.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
